fix alignment. fix greeting text.

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
 body {
   background: url("../images/holiday-background.png");
 }
+
+#greeting-text {
+  padding: 15px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
